--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@
 </IfModule>
 
 <IfModule mod_rewrite.c>
-RewriteCond $1 !^(_cms\.php|assets|data|downloads|pages)
+RewriteCond $1 !^(_cms\.php|assets|data|downloads|pages|supraja)
 RewriteCond %{REQUEST_URI} !\.(pdf|mp4|mp3|jpg|png)$
 RewriteRule ^(.*)$ _cms.php/?%{QUERY_STRING}&node=$1 [L]
 </IfModule>
