apps - iviewer and ftp-sync

--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,6 @@
 
 <IfModule mod_rewrite.c>
 RewriteCond $1 !^(_cms\.php|assets|data|downloads|pages|supraja|mobile-app)
-RewriteCond %{REQUEST_URI} !\.(pdf|mp4|mp3|jpg|png)$
+RewriteCond %{REQUEST_URI} !\.(pdf|mp4|mp3|jpg|png|xml|zip)$
 RewriteRule ^(.*)$ _cms.php/?%{QUERY_STRING}&node=$1 [L]
 </IfModule>
